--- a/index.html
+++ b/index.html
@@ -213,6 +213,13 @@
                     <p>Gained hands-on experience with Python development methodologies and participated in code reviews.</p>
                 </div>
             </div>
+            <div class="slide">
+                <img src="internship3.png" alt="Internship Experience 3">
+                <div class="description">
+                    <h3>Internship at Edunet Foundation – AICTE, as part of the IBM SkillsBuild Program!</h3>
+                    <p>Gained hands-on experience with CyberSecurity methodologies and participated in code reviews.</p>
+                </div>
+            </div>
             <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
             <button class="next" onclick="moveSlide(1)">&#10095;</button>
         </div>
@@ -317,6 +324,30 @@
                 <h3>Power BI for Data Analysis</h3>
                 <p>Completed on August 29, 2024</p>
                 <a href="https://www.linkedin.com/posts/lalitha-shivapriya_intermediate-activity-7259232048530247680-Cr3s?utm_source=share&utm_medium=member_desktop" target="_blank" class="certification-link">View Certificate</a>
+            </div>
+
+            <div class="certification-card">
+                <h3>NS2 by TASK</h3>
+                <p>Completed on September 11, 2024</p>
+                <a href="https://www.linkedin.com/posts/lalitha-shivapriya_im-thrilled-to-show-my-certificate-of-network-activity-7264287038701543424-cPhT?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEthPUgBr-YCj2NxT-6OwX2Tet7bJkEDdgU" target="_blank" class="certification-link">View Certificate</a>
+            </div>
+
+            <div class="certification-card">
+                <h3>National level short term training program -2k24 On Java Full Stack with React JS &AI</h3>
+                <p>Completed on December 22, 2024</p>
+                <a href="https://www.linkedin.com/posts/lalitha-shivapriya_national-level-short-term-training-program-activity-7283000378827120640-BB3u?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEthPUgBr-YCj2NxT-6OwX2Tet7bJkEDdgU" target="_blank" class="certification-link">View Certificate</a>
+            </div>
+
+            <div class="certification-card">
+                <h3> Data Analytics and Visualization Job Simulation with Forage</h3>
+                <p>Completed on November 19, 2024</p>
+                <a href="https://www.linkedin.com/posts/lalitha-shivapriya_certificate-activity-7264695882124521472-2pfd?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEthPUgBr-YCj2NxT-6OwX2Tet7bJkEDdgU" target="_blank" class="certification-link">View Certificate</a>
+            </div>
+
+            <div class="certification-card">
+                <h3> CyberSecurity Fundamentals</h3>
+                <p>Completed on November 19, 2024</p>
+                <a href="https://www.credly.com/badges/57d1acee-bbb1-43f4-9cdb-e99ff11053f8/public_url" target="_blank" class="certification-link">View Certificate</a>
             </div>
         </div>
     </section>
