--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="internship3.png" alt="Internship Experience 3">
+                <img src="internship3.jpg" alt="Internship Experience 3">
                 <div class="description">
                     <h3>Internship at CodSoft</h3>
                     <p>Gained hands-on experience with Python development methodologies and participated in code reviews.</p>
                 </div>
             </div>
             <div class="slide">
-                <img src="internship3.png" alt="Internship Experience 3">
+                <img src="internship4.png" alt="Internship Experience 3">
                 <div class="description">
                     <h3>Internship at Edunet Foundation – AICTE, as part of the IBM SkillsBuild Program!</h3>
                     <p>Gained hands-on experience with CyberSecurity methodologies and participated in code reviews.</p>
