--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1>Hi, I'm</h1>
             <h1>Lalitha Shivapriya</h1>
             <h3>And I'm <span class="multiple-text"></span></h3>
-            <p>I am a third-year B.Tech student specializing in Computer Science and Engineering. I am passionate about developing innovative software solutions, particularly in the areas of game development, web development, and database management. My aim is to create impactful projects that integrate creativity and technology.</p>
+            <p>I am a third-year B.Tech student specializing in Computer Science and Engineering. I am passionate about developing innovative software solutions, particularly in the areas of Data Analysis, web development, 2D Simple games and database management. My aim is to create impactful projects that integrate creativity and technology.</p>
             <div class="social-media">
                 <a href="https://www.facebook.com/lalithashivapriya" class="href"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.linkedin.com/in/lalitha-shivapriya/" class="href"><i class="fa-brands fa-linkedin"></i></a>
@@ -120,8 +120,8 @@
     
     <div class="read-more-container" id="game-development">
         <div class="read-more-content">
-            <h2>Game Development</h2>
-            <p>As a gaming enthusiast, I create engaging and interactive game experiences. I enjoy working on both frontend game designs and game mechanics, primarily using JavaScript and Unity for development. My passion for gaming drives me to experiment with new technologies, bringing immersive experiences to life.</p>
+            <h2>Data Analyst</h2>
+            <p>As a data analysis enthusiast, I thrive on transforming raw data into meaningful insights. I enjoy working with both data visualization and analytical techniques, primarily using tools like Python, Excel, Power BI, and SQL. My passion for data drives me to explore patterns, trends, and anomalies that can support decision-making and strategy. I continuously experiment with new analytical methods and technologies to uncover hidden stories within data and present them in clear, impactful ways.</p>
             <a href="#services" class="btn close-btn">Close</a>
         </div>
     </div>
