--- a/index.html
+++ b/index.html
@@ -349,6 +349,18 @@
                 <p>Completed on November 19, 2024</p>
                 <a href="https://www.credly.com/badges/57d1acee-bbb1-43f4-9cdb-e99ff11053f8/public_url" target="_blank" class="certification-link">View Certificate</a>
             </div>
+
+            <div class="certification-card">
+                <h3> Tata Group - Data Visualisation: Empowering Business with Effective Insights Job Simulation</h3>
+                <p>Completed on May 24, 2025</p>
+                <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/ifobHAoMjQs9s6bKS/gmf3ypEXBj2wvfQWC_ifobHAoMjQs9s6bKS_fZ8hdtkyunWgBu3CL_1748059821896_completion_certificate.pdf" target="_blank" class="certification-link">View Certificate</a>
+            </div>
+
+            <div class="certification-card">
+                <h3> Tata Group - Cybersecurity Analyst Job Simulation</h3>
+                <p>Completed on May 25, 2025</p>
+                <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/ifobHAoMjQs9s6bKS/MyXvBcppsW2FkNYCX_ifobHAoMjQs9s6bKS_fZ8hdtkyunWgBu3CL_1748058138686_completion_certificate.pdf" target="_blank" class="certification-link">View Certificate</a>
+            </div>
         </div>
     </section>
     
