--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
 
-        <a ref="#" class="logo">Shivapriya</a>
+        <a ref="#" class="logo">Lalitha Shivapriya</a>
 
         <i class="fa-solid fa-bars" id="menu-icon"></i>
         
