--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="https://www.instagram.com/shiva_sriramoju_1/" class="href"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://github.com/shivapriya032005" class="href"><i class="fa-brands fa-github"></i></a>
             </div>
-            <a href="Resume.pdf" download class="btn">Download Resume</a>
+            <a href="Priya Resume.pdf" download class="btn">Download Resume</a>
         </div>
         <div class="home-img">
             <img src="profile.jpeg" alt="Profile Picture">
