--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1>Hi, I'm</h1>
             <h1>Lalitha Shivapriya</h1>
             <h3>And I'm <span class="multiple-text"></span></h3>
-            <p>I am a third-year B.Tech student specializing in Computer Science and Engineering. I am passionate about developing innovative software solutions, particularly in the areas of Data Analysis, web development, 2D Simple games and database management. My aim is to create impactful projects that integrate creativity and technology.</p>
+            <p>I am a fourth-year B.Tech student specializing in Computer Science and Engineering. I am passionate about developing innovative software solutions, particularly in the areas of Data Analysis, web development, 2D Simple games and database management. My aim is to create impactful projects that integrate creativity and technology.</p>
             <div class="social-media">
                 <a href="https://www.facebook.com/lalithashivapriya" class="href"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.linkedin.com/in/lalitha-shivapriya/" class="href"><i class="fa-brands fa-linkedin"></i></a>
